Fix navbar width alignment

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,3 +1,9 @@
+/* Fix navbar and body container width */
+.nav {
+    max-width: calc(var(--main-width) + var(--gap) * 2);
+    margin: auto;
+}
+
 /* 2 column grid for post list */
 .post-entry {
     display: inline-block;
